# picept

./: README.md  pyproject.toml
src/: README.md  makefile
src/picept/: init.py
src/picept.egg-info/: PKG-INFO
